--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,15 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="Astarte" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/MaterialIndigo500</item>
+        <item name="colorPrimaryDark">@color/MaterialIndigo700</item>
+        <item name="colorAccent">@color/PinkAssent200</item>
+    </style>
+
+    <style name="Shuvi" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/MaterialPurple500</item>
+        <item name="colorPrimaryDark">@color/MaterialPurple700</item>
+        <item name="colorAccent">@color/MaterialPurple200</item>
     </style>
 
 </resources>
