--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,19 +3,19 @@
     <style name="Astarte" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/MaterialIndigo500</item>
         <item name="colorPrimaryDark">@color/MaterialIndigo700</item>
-        <item name="colorAccent">@color/PinkAssent200</item>
+        <item name="colorAccent">@color/IndigoAssent200</item>
     </style>
 
     <style name="Shuvi" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/MaterialPurple500</item>
         <item name="colorPrimaryDark">@color/MaterialPurple700</item>
-        <item name="colorAccent">@color/MaterialPurple200</item>
+        <item name="colorAccent">@color/PurpleAssent200</item>
     </style>
 
     <style name="Rin" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/MaterialYellow500</item>
         <item name="colorPrimaryDark">@color/MaterialYellow700</item>
-        <item name="colorAccent">@color/MaterialYellow200</item>
+        <item name="colorAccent">@android:color/black</item>
     </style>
 
 </resources>
