--- a/app/src/main/res/layout/delay_autocomplete_edit_text.xml
+++ b/app/src/main/res/layout/delay_autocomplete_edit_text.xml
@@ -27,11 +27,25 @@
         android:id="@+id/DelayAutocompleteEditTextClear"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
-        android:padding="4dp"
+        android:padding="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/DelayAutocompleteEditTextProgress"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:indeterminate="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
