Add ids to layouts in start package

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="activity_start_toolbar" type="id">StartActivity_Toolbar</item>
+    <item name="start_toolbar" type="id">StartActivity_Toolbar</item>
     <item name="activity_appsettings_toolbar" type="id">ActivityAppSettings_Toolbar</item>
     <item name="activity_appsettings_style" type="id">ActivityAppSettings_Style</item>
     <item name="action_show_search" type="id">Action_ShowSearch</item>
     <item name="activity_booru_toolbar" type="id">ActivityBooru_Toolbar</item>
     <item name="activity_booru_toolbar_search" type="id">ActivityBooru_Toolbar_Search</item>
     <item name="activity_booru_toolbar_search_alpha" type="id">ActivityBooru_Toolbar_Search_Alpha</item>
+    <item name="start_content" type="id" />
+    <item name="start_main" type="id" />
 </resources>
