--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -11,4 +11,7 @@
     <item name="start_main" type="id" />
     <item name="appsettings_main" type="id" />
     <item name="appsettings_style" type="id" />
+    <item name="booru_toolbar_search_delayautocompleteedittext" type="id" />
+    <item name="booru_toolbar_search_clear" type="id" />
+    <item name="booru_toolbar_search_progressbar" type="id" />
 </resources>
