Remake booru package with mvvm pattern. Remake showing drawables - now it using ColorFilter to draw icon with necessary color. Add animator classes to search labels. Some style refactorings. Fix non critical exception when activity recreates in onResume method.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,9 +4,9 @@
     <item name="appsettings_toolbar" type="id">ActivityAppSettings_Toolbar</item>
     <item name="activity_appsettings_style" type="id">ActivityAppSettings_Style</item>
     <item name="action_show_search" type="id">Action_ShowSearch</item>
-    <item name="activity_booru_toolbar" type="id">ActivityBooru_Toolbar</item>
-    <item name="activity_booru_toolbar_search" type="id">ActivityBooru_Toolbar_Search</item>
-    <item name="activity_booru_toolbar_search_alpha" type="id">ActivityBooru_Toolbar_Search_Alpha</item>
+    <item name="booru_content_toolbar" type="id">ActivityBooru_Toolbar</item>
+    <item name="booru_content_search" type="id">ActivityBooru_Toolbar_Search</item>
+    <item name="booru_content_alpha" type="id">ActivityBooru_Toolbar_Search_Alpha</item>
     <item name="start_content" type="id" />
     <item name="start_main" type="id" />
     <item name="appsettings_main" type="id" />
