--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -19,4 +19,5 @@
     <item name="booru_content_gallery_post_main" type="id" />
     <item name="booru_content_gallery_post_preview" type="id" />
     <item name="booru_content_gallery_fab" type="id" />
+    <item name="booru_panel_background_image" type="id" />
 </resources>
