--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,12 @@
 
     <color name="MaterialPurple700">#7b1fa2</color>
     <color name="MaterialPurple500">#9c27b0</color>
+    <color name="MaterialPurple200">#ce93d8</color>
     <color name="PurpleAssent200">#e040fb</color>
 
     <color name="MaterialYellow700">#FBC02D</color>
     <color name="MaterialYellow500">#ffeb3b</color>
-    <color name="MaterialYellow200">#ffeb3b</color>
+    <color name="MaterialYellow200">#fff59d</color>
 
     <color name="MaterialGrey100">#f5f5f5</color>
 </resources>
