--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -21,4 +21,5 @@
     <item name="booru_content_gallery_fab" type="id" />
     <item name="booru_panel_background_image" type="id" />
     <item name="booru_content_container" type="id" />
+    <item name="booru_main" type="id" />
 </resources>
