--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="MaterialYellow200">#fff59d</color>
 
     <color name="MaterialGrey100">#f5f5f5</color>
+    <color name="MaterialGrey500">#9e9e9e</color>
 </resources>
