Remake a comments displaying with parsing a html page. The comments is displaying in a vertical view pager which contain a fragments with recycle view. This construction emulates a some part of the infinity scroll.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -22,4 +22,13 @@
     <item name="booru_panel_background_image" type="id" />
     <item name="booru_content_container" type="id" />
     <item name="booru_main" type="id" />
+    <item name="booru_content_comment_viewholder_postview" type="id" />
+    <item name="booru_content_comment_viewholder_postview_preview" type="id" />
+    <item name="booru_content_comment_viewholder_commentsview" type="id" />
+    <item name="booru_content_comment_viewholder_postview_date" type="id" />
+    <item name="booru_content_comment_viewholder_postview_tags" type="id" />
+    <item name="booru_content_comment_viewholder_postview_score" type="id" />
+    <item name="booru_content_comment_viewholder_commentsview_comment_body" type="id" />
+    <item name="booru_content_comment_viewholder_commentsview_comment_creator" type="id" />
+    <item name="booru_content_comment_viewholder_commentsview_comment_createdAt" type="id" />
 </resources>
