--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,16 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <!--  Base application theme.  -->
+    <style name="AppBase" parent="Theme.MaterialComponents.Light.NoActionBar"/>
+    <style name="Sotis" parent="AppBase">
+        <item name="colorPrimary">@color/MaterialTeal600</item>
+        <item name="colorPrimaryDark">@color/MaterialTeal900</item>
+        <item name="colorAccent">@android:color/white</item>
+    </style>
+    <style name="Astarte" parent="AppBase">
+        <item name="colorPrimary">@color/MaterialIndigo500</item>
+        <item name="colorPrimaryDark">@color/MaterialIndigo700</item>
+        <item name="colorAccent">@color/IndigoAssent200</item>
     </style>
 
 </resources>
