[feature] Add booru screen

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,6 @@
     <item name="settings" type="id"/>
     <item name="toolbarcontainer" type="id"/>
     <item name="overflow" type="id"/>
+    <item name="boorucontent" type="id"/>
+    <item name="boorudrawer" type="id"/>
 </resources>
