--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -10,4 +10,5 @@
     <item name="toolbar_container_toolbar" type="id"/>
     <item name="toolbar_container_drawermenu" type="id"/>
     <item name="content_viewpager" type="id"/>
+    <item name="search_container_edittext" type="id"/>
 </resources>
