[test](booru) Add tests for BooruFragment

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -13,4 +13,6 @@
     <item name="search_container_edittext" type="id"/>
     <item name="preview" type="id"/>
     <item name="listview" type="id"/>
+    <item name="posts" type="id"/>
+    <item name="account" type="id"/>
 </resources>
