--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -13,4 +13,7 @@
     <item name="search_container_edittext" type="id"/>
     <item name="preview" type="id"/>
     <item name="viewpager" type="id"/>
+    <item name="sample_image_message" type="id"/>
+    <item name="sample_image_progressbar" type="id"/>
+    <item name="sample_image_view" type="id"/>
 </resources>
