[refactor] Add VerticalViewPager with nesting scroll support. Add SamplesContent screen where the images will be displayed using viewpager.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -38,6 +38,7 @@
     <item name="postpreviewpage_messageview" type="id"/>
 
     <item name="postsamples_verticalpager" type="id"/>
+    <item name="postsamples_content_viewpager" type="id"/>
 
 
     <item name="viewpager" type="id"/>
