[refactor] Update bottombar. Add on item click listener for bottombar

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -40,7 +40,10 @@
     <item name="postsamples_toolbar" type="id"/>
     <item name="postsamples_verticalpager" type="id"/>
     <item name="postsamples_content_viewpager" type="id"/>
-
+    <item name="postsamples_bottombar" type="id"/>
+    <item name="postsamples_bottombar_infoitem" type="id"/>
+    <item name="postsamples_bottombar_tagsitem" type="id"/>
+    <item name="postsamples_bottombar_commentsitem" type="id"/>
 
     <item name="viewpager" type="id"/>
     <item name="postsample_toolbar_container" type="id"/>
@@ -50,7 +53,5 @@
     <item name="sample_image_message" type="id"/>
     <item name="sample_image_progressbar" type="id"/>
     <item name="sample_image_view" type="id"/>
-    <item name="postsamples_bottombar" type="id"/>
-
 
 </resources>
