[refactor] Make separate sample file for some formats - for image, webm and gif animation

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -54,7 +54,7 @@
     <item name="sample_image_progressbar" type="id"/>
     <item name="sample_image_view" type="id"/>
     <item name="postsample_messageview" type="id"/>
-    <item name="postsample_imageview" type="id"/>
+    <item name="postsample_content" type="id"/>
     <item name="postsample_progressbar" type="id"/>
 
 </resources>
