[refactor] Add toolbar for post info screen. Update post tags toolbar

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -60,5 +60,7 @@
     <item name="posttags_progressbar" type="id"/>
     <item name="posttags_toolbar_search" type="id"/>
     <item name="posttags_toolbar_back" type="id"/>
+    <item name="postinfo_toolbar" type="id"/>
+    <item name="toolbar_back" type="id"/>
 
 </resources>
