[feature] Add posts page screen where the previews will be displayed.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -69,5 +69,8 @@
     <item name="searchDialog_delayAutocompleteEditText" type="id"/>
     <item name="searchDialog_separator" type="id"/>
     <item name="searchDialog_chipgroup" type="id"/>
+    <item name="posts_bottombar" type="id"/>
+    <item name="posts_toolbar" type="id"/>
+    <item name="posts_viewpager" type="id"/>
 
 </resources>
