--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -28,10 +28,8 @@
     <item name="postpreview_search_container_clear" type="id"/>
     <item name="postpreview_search_tags" type="id"/>
     <item name="postpreview_bottombar" type="id"/>
-    <item name="postpreview_bottombar_left" type="id"/>
-    <item name="postpreview_bottombar_center" type="id"/>
-    <item name="postpreview_bottombar_right" type="id"/>
-    <item name="postpreview_bottombar_center_textview" type="id"/>
+    <item name="posts_bottombar_right" type="id"/>
+    <item name="posts_bottombar_center_textview" type="id"/>
 
     <item name="postpreviewpage_progressbar" type="id"/>
     <item name="postpreviewpage_messageview" type="id"/>
@@ -61,6 +59,9 @@
     <item name="posttags_toolbar_back" type="id"/>
     <item name="postinfo_toolbar" type="id"/>
     <item name="toolbar_back" type="id"/>
+
+
+
     <item name="postinfo_content" type="id"/>
     <item name="start_toolbar" type="id"/>
     <item name="booru_toolbar_drawermenu" type="id"/>
@@ -72,5 +73,7 @@
     <item name="posts_bottombar" type="id"/>
     <item name="posts_toolbar" type="id"/>
     <item name="posts_viewpager" type="id"/>
+    <item name="posts_bottombar_left" type="id"/>
+    <item name="posts_bottombar_center" type="id"/>
 
 </resources>
