[feature] Update caches. Add posts data loading and caching

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -75,6 +75,9 @@
     <item name="posts_viewpager" type="id"/>
     <item name="posts_bottombar_left" type="id"/>
     <item name="posts_bottombar_center" type="id"/>
+    <item name="posts_page_gridview" type="id"/>
     <item name="posts_page" type="id"/>
+    <item name="posts_page_progress" type="id"/>
+    <item name="posts_page_textview" type="id"/>
 
 </resources>
