[feature] Add Picasso and preview images loading into grid view

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -79,5 +79,6 @@
     <item name="posts_page" type="id"/>
     <item name="posts_page_progress" type="id"/>
     <item name="posts_page_textview" type="id"/>
+    <item name="posts_page_gridview_element_image" type="id"/>
 
 </resources>
