--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -99,5 +99,6 @@
     <item name="sampleinfo_tags_scrollview" type="id"/>
     <item name="sampleinfo_progressbar" type="id"/>
     <item name="sampleinfo_info_listview" type="id"/>
+    <item name="samples_gif" type="id"/>
 
 </resources>
