[refactor] Update styles for booru and posts screens

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,8 @@
         <!--<item name="android:titleTextColor">@android:color/white</item>-->
     </style>
 
+    <style name="SotisProgress" parent="Sotis">
+        <item name="android:indeterminateDrawable">@color/MaterialTeal600</item>
+    </style>
+
 </resources>
