[feature] Add NSFW setting and using it for posts searching

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -101,5 +101,7 @@
     <item name="sampleinfo_info_listview" type="id"/>
     <item name="samples_gif" type="id"/>
     <item name="samples_webm" type="id"/>
-
+    <item name="settings_toolbar" type="id"/>
+    <item name="setting_nsfw" type="id"/>
+    <item name="setting_nsfw_checkbox" type="id"/>
 </resources>
