[fix] Fix progress bar background color

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
     </style>
 
     <style name="SotisProgress" parent="SotisDefault">
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:indeterminateDrawable">@color/MaterialTeal600</item>
     </style>
 
