[feature] Add progress bar for search screen when tags tries to autocomplete the progress bar will be visible

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -104,4 +104,5 @@
     <item name="settings_toolbar" type="id"/>
     <item name="setting_nsfw" type="id"/>
     <item name="setting_nsfw_checkbox" type="id"/>
+    <item name="search_progress" type="id"/>
 </resources>
