[feature] Add user agreement dialog for nsfw content enabling

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,10 @@
         <item name="android:indeterminateDrawable">@color/MaterialTeal600</item>
     </style>
 
+    <style name="Dialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+
+    </style>
+
     <style name="AppBaseChip" parent="Theme.MaterialComponents"/>
 
 </resources>
