--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,12 +29,16 @@
         <item name="android:indeterminateDrawable">@color/MaterialTeal600</item>
     </style>
 
+    <style name="SotisDialog" parent="DialogLight"/>
+
+    <style name="SotisText" parent="EditTextLight"/>
+
     <style name="DialogLight" parent="Theme.AppCompat.Light.Dialog.Alert"/>
 
     <style name="EditTextLight" parent="ThemeOverlay.MaterialComponents.Light">
         <item name="android:textCursorDrawable">@android:color/black</item>
         <item name="android:background">@android:color/transparent</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="AppBaseChip" parent="Theme.MaterialComponents"/>
