[feature] Add searching start from sampleinfo screen

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -105,4 +105,5 @@
     <item name="setting_nsfw" type="id"/>
     <item name="setting_nsfw_checkbox" type="id"/>
     <item name="search_progress" type="id"/>
+    <item name="sampleinfo_toolbar_tags_search" type="id"/>
 </resources>
