--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -113,4 +113,5 @@
     <item name="report_toolbar" type="id"/>
     <item name="report_body" type="id"/>
     <item name="samples_preview" type="id"/>
+    <item name="samples_progress_concrete" type="id"/>
 </resources>
