[feature] Add webm playing setting

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -115,4 +115,6 @@
     <item name="samples_preview" type="id"/>
     <item name="samples_progress_concrete" type="id"/>
     <item name="samples_page" type="id"/>
+    <item name="setting_webm_on_place" type="id"/>
+    <item name="setting_webm_on_place_checkbox" type="id"/>
 </resources>
