[feature] Add file type for gifs and webms in posts screen

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -118,4 +118,5 @@
     <item name="setting_webm_on_place" type="id"/>
     <item name="setting_webm_on_place_checkbox" type="id"/>
     <item name="samples_webm_container" type="id"/>
+    <item name="posts_page_gridview_element_type" type="id"/>
 </resources>
