--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,8 @@
         <item name="colorAccent">@color/MaterialTeal900</item>
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="tabTextColor">@color/MaterialGrey500</item>
+        <item name="tabSelectedTextColor">@android:color/white</item>
     </style>
 
     <style name="SotisProgress" parent="SotisDefault">
